--- a/scss/shop.scss
+++ b/scss/shop.scss
@@ -161,10 +161,12 @@ main{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, 1fr);
+        gap: 50px 30px;
+        margin-bottom: 85px;
+
         .shop__card{
             max-width: 285px;
             background-color: #f4f5f7;
-            margin-bottom: 85px;
             ul{
                 padding: 16px 16px 30px 16px;
                 p{
@@ -186,6 +188,60 @@ main{
                     margin-left: 8px;
                 }
             }
+        }
+
+        .productadd__cart{
+            display: none;
+            position: absolute;
+            width: 252px;
+            margin: auto;
+            text-align: center;
+            padding: 175px 20px;
+            box-sizing: border-box;
+            a{
+                @include font("brown", 16px, "", 150%);
+                @include button(12px 50px, "brown", none);
+                text-decoration: none;
+                font-weight: 600px;
+                display: inline-block;
+            }
+            .productadd__card--item{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 24px;   
+                // gap: 20px;
+                box-sizing: border-box;
+                ul{
+                    display: flex;
+                    align-items: center;
+                    gap: 2px;
+                    // max-width: 10px;
+                    margin-left: -15px;
+                    strong {
+                        @include font("light", 16px, "", 24px);
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+
+        .shop__card:hover{
+            transform: scale(1.1);
+
+        }
+
+        .shop__card:hover .productadd__cart{
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            background-color: rgba(51, 51, 51, 0.85);
+            opacity: 1;
+            
+            // transform: scale(1.1);
         }
 
     }
